[gd_scene load_steps=9 format=3 uid="uid://bmblxdubn3q71"]

[ext_resource type="Script" path="res://scenes/bullets/basic_bullet/basic_bullet.gd" id="1_pcyrm"]
[ext_resource type="PackedScene" uid="uid://gnqwb6vocqoh" path="res://scenes/bullets/basic_bullet/basic_bullet_collision_death_particle.tscn" id="2_r71h3"]
[ext_resource type="PackedScene" uid="uid://yr5a7sukpmih" path="res://scenes/bullets/basic_bullet/basic_bullet_lifespan_death_particle.tscn" id="3_r8kr0"]
[ext_resource type="Script" path="res://scenes/debug/debug_circle/debug_circle.gd" id="4_6q6pu"]
[ext_resource type="PackedScene" uid="uid://de6e7b2yn1en7" path="res://scenes/particles/aoe_particles/basic_aoe_explosion_particles/basic_aoe_explosion_particles.tscn" id="4_10rek"]
[ext_resource type="Script" path="res://scenes/systems/health/health_base.gd" id="5_wbc34"]
[ext_resource type="Script" path="res://scenes/systems/damage/damage_applyer/damage_applyer.gd" id="6_cko3w"]
[ext_resource type="Script" path="res://scenes/systems/damage/damage_receiver/damage_receiver.gd" id="7_w2kjy"]

[node name="BasicBullet" type="Area2D" node_paths=PackedStringArray("health_ref", "damage_applyer_ref") groups=["player_projectiles"]]
position = Vector2(200, 200)
collision_layer = 2
collision_mask = 4
monitorable = false
script = ExtResource("1_pcyrm")
collision_death_particle_scene = ExtResource("2_r71h3")
lifespan_death_particle_scene = ExtResource("3_r8kr0")
aoe_particle_scene = ExtResource("4_10rek")
health_ref = NodePath("Health")
damage_applyer_ref = NodePath("DamageApplyer")
damage = 10.0
area_of_effect = 100.0
lifespan = 2.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="CircleDrawer" type="Node2D" parent="."]
script = ExtResource("4_6q6pu")
color = Color(1, 1, 1, 1)
streak = false

[node name="Health" type="Node" parent="."]
script = ExtResource("5_wbc34")
health = 10.0

[node name="DamageApplyer" type="Node" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("6_cko3w")
parent = NodePath("..")
group_blacklist = Array[String](["player_projectiles"])

[node name="DamageReceiver" type="Node" parent="."]
script = ExtResource("7_w2kjy")

[connection signal="body_entered" from="." to="." method="_on_rigid_body_body_entered"]
[connection signal="health_expired" from="Health" to="." method="_on_health_expired"]
[connection signal="damage_received" from="DamageReceiver" to="Health" method="_on_damage_received"]
